# react-native-nitro-xray-core

./: CHANGELOG.md  IMPLEMENTATION_PLAN.md  NitroXrayCore.podspec  README.md  nitro.json  package.json  post-script.js  tsconfig.json
.github/workflows/: ios-build.yml  release.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp  libxray.h
android/src/main/cpp/xray/x86/: libxray.h
android/src/main/java/com/margelo/nitro/nitroxraycore/: HybridNitroXrayCore.kt
android/src/main/java/com/nitroxraycore/: HybridNitroXrayCore.kt  NitroXrayCorePackage.kt  VpnRequestActivity.kt  XrayEngine.kt  XrayVpnService.kt
example/: App.tsx  Gemfile  app.json  babel.config.js  env.d.ts  example.env  package.json  tsconfig.json
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/NitroXrayCoreExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  NitroXrayCoreExample.entitlements
example/ios/NitroXrayCoreExample.xcodeproj/: project.pbxproj
example/ios/NitroXrayCoreExample.xcworkspace/: contents.xcworkspacedata
example/ios/tunnel/: PacketTunnelProvider.swift  tunnel-Bridging-Header.h  tunnel.entitlements
go-core/: build_android.sh  build_ios.sh  go.mod
go-core/libxray/: main.go  main_ios.go
ios/: Bridge.h  HybridNitroXrayCore.swift
ios/Xray.xcframework/: Info.plist
ios/Xray.xcframework/ios-arm64/Headers/: libxray.h
src/: index.ts
src/specs/: nitro-xray-core.nitro.ts
(+4 files in other folders)
